--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-"name": "GataBotLite-MD",
+"name": "KanakiBot-Lite",
 "version": "1.0.2", 
 "description": "Bot ligero para WhatsApp",
 "main": "index.js",
@@ -15,16 +15,16 @@
 "test": "node test.js",
 "test2": "nodemon index.js" },
     
-"homepage": "https://github.com/GataNina-Li/GataBotLite-MD",
+"homepage": "https://github.com/Saldarriaga184/KanekiBot-Lite",
 "author": {
-"name": "GataNina-Li" },
+"name": "Saldarriaga184" },
     
 "repository": {
 "type": "git",
-"url": "git+https://github.com/GataNina-Li/GataBotLite-MD.git" },
+"url": "git+https://github.com/Saldarriaga184/KanakiBot-Lite.git" },
     
 "bugs": {
-"url": "https://github.com/GataNina-Li/GataBotLite-MD/issues" },
+"url": "https://github.com/Saldarriaga184/KanakiBot-Lite/issues" },
 "license": "GPL-3.0-or-later",
 "dependencies": {
   "@adiwajshing/baileys": "npm:baileys@^6.0.9",
